Многоэтапная сборка [#505359]